--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,6 +18,8 @@ services:
       - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
       - POSTGRES_DB=${POSTGRES_DB}
       - POSTGRES_ADDR=postgres
+      - JWT_ALG=${JWT_ALG}
+      - JWT_SIGN=${JWT_SIGN}
     depends_on:
       - postgres
       - adminer
