migrate psql to repository layer

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -48,7 +48,7 @@ services:
     image: migrate/migrate
     restart: on-failure
     volumes:
-      - ./pkg/db/migrations:/migrations
+      - ./sql/migrations:/migrations
     command:
       [
         '-path',
