--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,6 +20,7 @@ services:
       - POSTGRES_ADDR=postgres
       - JWT_ALG=${JWT_ALG}
       - JWT_SIGN=${JWT_SIGN}
+      - GO_ENV=${GO_ENV}
     depends_on:
       - postgres
       - adminer
